--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
-    "mkdirp": "^0.5.1"
+    "gulp-uglify": "^2.0.0",
+    "mkdirp": "^0.5.1",
+    "uglify-js": "^2.7.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
