Add minified build.

--- a/package.json
+++ b/package.json
@@ -17,24 +17,22 @@
   },
   "homepage": "https://github.com/threesy/threesy-line#readme",
   "dependencies": {
-    "babelify": "^7.3.0",
     "d3-array": "^1.0.2",
     "d3-axis": "^1.0.4",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.3",
-    "d3-shape": "^1.0.4",
-    "uuid": "^3.0.1"
+    "d3-shape": "^1.0.4"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.1.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "mkdirp": "^0.5.1",
-    "uglify-js": "^2.7.5",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "rollup": "^0.37.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1"
   }
 }
