--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [
-    ["env", {
-        "targets": {
-          "browsers": ["last 2 versions", "safari >= 7", "ie >= 9"]
-        }
-      }
-    ]
-  ]
+  "presets": ["es2015-rollup"]
 }
