--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-register": "^6.18.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
@@ -33,6 +34,7 @@
     "mkdirp": "^0.5.1",
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-node-resolve": "^2.0.0"
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "tape": "^4.6.3"
   }
 }
