Add tooltip support.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "d3-axis": "^1.0.4",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.3",
-    "d3-shape": "^1.0.4"
+    "d3-shape": "^1.0.4",
+    "tether-tooltip": "^1.2.0"
   },
   "devDependencies": {
     "babel-preset-es2015-rollup": "^3.0.0",
